This is sources Bugzilla
Bugzilla Version 2.17.5
Bugzilla Bug 786
  Assertion failure in sysdeps/generic/dl-tls.c: _dl_next_tls_modid: `result <= _rtld_local._dl_tls_max_dtv_idx' Last modified: 2005-09-27 01:49
     Query page      Enter new bug
Bug#: 786   Hardware:   Reporter: Ed Catmur <ed@catmur.co.uk>
Host: Target: Build:
Product:     Add CC:
Component:   Version:   CC:
Remove selected CCs
Status: RESOLVED   Priority:  
Resolution: FIXED   Severity:  
Assigned To: GOTO Masanori <gotom@debian.or.jp>   Target Milestone:  
Flags: Requestee:
  backport ()
  examined ()
  testsuite ()
Summary:
Keywords:

Attachment Description Type Created Actions
Create a New Attachment (proposed patch, testcase, etc.) View All

Bug 786 depends on: Show dependency tree
Show dependency graph
Bug 786 blocks:

Additional Comments:


Leave as RESOLVED FIXED
Reopen bug
Mark bug as VERIFIED

View Bug Activity   |   Format For Printing


Description:   Last confirmed: 0000-00-00 00:00 Opened: 2005-03-13 02:20
When a shared library is unloaded during program startup due to failure to
resolve library dependency, attempt to use TLS in libraries loaded to satisfy
subsequent dependencies crashes with:

Inconsistency detected by ld.so: ../sysdeps/generic/dl-tls.c: 76:
_dl_next_tls_modid: Assertion `result <= _rtld_local._dl_tls_max_dtv_idx' failed!

Initial analysis and testcase here:
http://bugs.debian.org/cgi-bin/bugreport.cgi?bug=219352#msg122

The testcase is at the bottom of the linked bug report, direct URL
http://bugs.debian.org/cgi-bin/bugreport.cgi/xbug.tar.gz?bug=219352&msg=122&att=1

Further analysis and demonstration patch here:
http://bugs.gentoo.org/show_bug.cgi?id=52374#c15

Google search on assertion string shows this bug has been known at least since
November 2003. It tends to manifest in media applications e.g. xmms, vlc as
these use many shared library plugins which may or may not be present at runtime.

------- Additional Comment #1 From Jakub Jelinek 2005-03-15 15:26 -------
http://sources.redhat.com/ml/libc-hacker/2005-03/msg00044.html

------- Additional Comment #2 From Jakub Jelinek 2005-03-15 15:28 -------
Oops, pasted wrong URL.  The right one is:
http://sources.redhat.com/ml/libc-hacker/2005-03/msg00043.html

------- Additional Comment #3 From Ulrich Drepper 2005-09-27 01:49 -------
Long since fixed.

     Query page      Enter new bug
Actions: New | Query | bug # | Reports | Requests   New Account | Log In